# sipros5

./: .gitignore  CMakeLists.txt  CMakePresets.backup.json  CMakePresets.json  LICENSE  README.md  cross-linux.cmake  debug.sh  extractSeq  launch.vs.json  make.sh  note.md  runMPI.sh  siproswf  test.sh
AerithFeatureExtractor/: CMakeLists.txt
AerithFeatureExtractor/include/: PSMfeatureExtractor.h
AerithFeatureExtractor/src/: PSMfeatureExtractor.cpp  main.cpp
MSToolkit/: CMakeLists.txt  note.md
configGenerator/: CMakeLists.txt
configGenerator/src/: cfgParser.cpp  cfgParser.h  main.cpp
configTemplates/: Regular.cfg  SIP.cfg
include/: MVH.h  averagine.h  isotopologue.h  ms2scan.h  ms2scanvector.h  peptide.h  proNovoConfig.h  proteindatabase.h
mpi/: CMakeLists.txt  mpimain.cpp
openmp/: CMakeLists.txt  main.cpp
script/: sipros_psm_tabulating.py
script3/: debugProxy.py  sipros_ensemble_filtering.py  sipros_peptides_assembling.py  sipros_post_module.py
script33/: assembly.py  debugProxy.py  feature.py  filter.py  main.py  search.py
src/: CometSearchMod.cpp  MVH.cpp  SiprosReader.cpp  averagine.cpp  isotopologue.cpp  ms2scan.cpp  ms2scanvector.cpp  peptide.cpp  proNovoConfig.cpp  proteindatabase.cpp
test/configs/: C13_0Pct.cfg  C13_100000Pct.cfg  C13_10000Pct.cfg  C13_1070Pct.cfg  C13_11000Pct.cfg  C13_12000Pct.cfg  C13_13000Pct.cfg  C13_14000Pct.cfg  C13_15000Pct.cfg  C13_16000Pct.cfg  C13_17000Pct.cfg  C13_18000Pct.cfg  C13_19000Pct.cfg  C13_20000Pct.cfg  C13_2000Pct.cfg  C13_21000Pct.cfg  C13_22000Pct.cfg  C13_23000Pct.cfg  C13_24000Pct.cfg  C13_25000Pct.cfg  C13_26000Pct.cfg  C13_27000Pct.cfg  C13_28000Pct.cfg  C13_29000Pct.cfg  C13_30000Pct.cfg  C13_3000Pct.cfg  C13_31000Pct.cfg  C13_32000Pct.cfg  C13_33000Pct.cfg  C13_34000Pct.cfg  C13_35000Pct.cfg  C13_36000Pct.cfg  C13_37000Pct.cfg  C13_38000Pct.cfg  C13_39000Pct.cfg  C13_40000Pct.cfg  C13_4000Pct.cfg  C13_41000Pct.cfg  C13_42000Pct.cfg  C13_43000Pct.cfg  (+61 more)
tools/: aerithFeatureExtractor  configGenerator  sipros  siprosMPI
